--- a/jpegant/jpegant-stripped/src/encoder/Makefile
+++ b/jpegant/jpegant-stripped/src/encoder/Makefile
@@ -1,17 +1,15 @@
 #CC=gcc
-CFLAGS =-g -O -msse2 -fomit-frame-pointer
-CPPFLAGS =-O3 -msse2
+CFLAGS =-g -O2 
+CPPFLAGS =-O2 
 CFLAGS+=-Wa,-a=$<.s
 LIBS =
 OBJECTS = dct.o jpegenc.o
 
 jpegant: $(OBJECTS)
-	$(CXX) $(CPPFLAGS) main.cpp $(OBJECTS) -o jpegant
+	$(CC) $(CFLAGS) main.c $(OBJECTS) -o jpegant
 
 $(OBJECTS): %.o: %.c
 	$(CC) -c $(CFLAGS) $< -o $@
                   
-$(OBJECTS): arch.h
- 
 clean:
 	rm -f $(OBJECTS) jpegant *.s
