--- a/jpegant/jpegant-stripped/src/encoder/Makefile
+++ b/jpegant/jpegant-stripped/src/encoder/Makefile
@@ -1,5 +1,5 @@
 #CC=gcc
-CFLAGS =-g -ggdb -O -std=c99 -D__X86
+CFLAGS =-O2 -std=c99 -D__X86
 CFLAGS+=-Wa,-a=$<.s
 LIBS =
 OBJECTS = dct.o jpegenc.o rgbdata.o
