--- a/stm32f4-devel/Makefile
+++ b/stm32f4-devel/Makefile
@@ -70,6 +70,7 @@ include $(CHIBIOS)/os/hal/platforms/STM32F4xx/platform.mk
 include $(CHIBIOS)/os/hal/hal.mk
 include $(CHIBIOS)/os/ports/GCC/ARMCMx/STM32F4xx/port.mk
 include $(CHIBIOS)/os/kernel/kernel.mk
+include $(CHIBIOS)/uart_iface/uart_iface.mk
 
 # Define linker script file here
 LDSCRIPT= $(PORTLD)/STM32F407xG.ld
@@ -83,6 +84,7 @@ CSRC = $(PORTSRC) \
        $(HALSRC) \
        $(PLATFORMSRC) \
        $(BOARDSRC) \
+       $(SERIALSRC) \
        $(CHIBIOS)/os/various/chprintf.c \
        main.c
 
@@ -113,9 +115,14 @@ TCPPSRC =
 # List ASM source files here
 ASMSRC = $(PORTASM)
 
-INCDIR = $(PORTINC) $(KERNINC) $(TESTINC) \
-         $(HALINC) $(PLATFORMINC) $(BOARDINC) \
-         $(CHIBIOS)/os/various
+INCDIR = $(PORTINC) \
+	 $(KERNINC) \
+	 $(TESTINC) \
+         $(HALINC) \
+	 $(PLATFORMINC) \
+	 $(BOARDINC) \
+         $(CHIBIOS)/os/various \
+	 $(SERIALINC)
 
 #
 # Project, sources and paths
