Beginning work on the spi flash module
-MD

--- a/stm32f4-devel/Makefile
+++ b/stm32f4-devel/Makefile
@@ -71,6 +71,7 @@ include $(CHIBIOS)/os/hal/hal.mk
 include $(CHIBIOS)/os/ports/GCC/ARMCMx/STM32F4xx/port.mk
 include $(CHIBIOS)/os/kernel/kernel.mk
 include $(CHIBIOS)/uart_iface/uart_iface.mk
+include $(CHIBIOS)/spi_flash/spi_flash.mk
 
 # Define linker script file here
 LDSCRIPT= $(PORTLD)/STM32F407xG.ld
@@ -85,6 +86,7 @@ CSRC = $(PORTSRC) \
        $(PLATFORMSRC) \
        $(BOARDSRC) \
        $(SERIALSRC) \
+       $(SPIFLASHSRC) \
        $(CHIBIOS)/os/various/chprintf.c \
        main.c
 
@@ -122,7 +124,8 @@ INCDIR = $(PORTINC) \
 	 $(PLATFORMINC) \
 	 $(BOARDINC) \
          $(CHIBIOS)/os/various \
-	 $(SERIALINC)
+	 $(SERIALINC) \
+         $(SPIFLASHINC)
 
 #
 # Project, sources and paths
