--- a/stm32f4-devel/Makefile
+++ b/stm32f4-devel/Makefile
@@ -71,7 +71,7 @@ include $(CHIBIOS)/os/hal/hal.mk
 include $(CHIBIOS)/os/ports/GCC/ARMCMx/STM32F4xx/port.mk
 include $(CHIBIOS)/os/kernel/kernel.mk
 include $(CHIBIOS)/uart_iface/uart_iface.mk
-include $(CHIBIOS)/spi_flash/spi_flash.mk
+#include $(CHIBIOS)/spi_flash/spi_flash.mk
 
 # Define linker script file here
 LDSCRIPT= $(PORTLD)/STM32F407xG.ld
@@ -86,7 +86,6 @@ CSRC = $(PORTSRC) \
        $(PLATFORMSRC) \
        $(BOARDSRC) \
        $(SERIALSRC) \
-       $(SPIFLASHSRC) \
        $(CHIBIOS)/os/various/chprintf.c \
        main.c
 
@@ -125,7 +124,6 @@ INCDIR = $(PORTINC) \
 	 $(BOARDINC) \
          $(CHIBIOS)/os/various \
 	 $(SERIALINC) \
-         $(SPIFLASHINC)
 
 #
 # Project, sources and paths
