--- a/stm32f4-devel/Makefile
+++ b/stm32f4-devel/Makefile
@@ -72,6 +72,7 @@ include $(CHIBIOS)/os/ports/GCC/ARMCMx/STM32F4xx/port.mk
 include $(CHIBIOS)/os/kernel/kernel.mk
 include $(CHIBIOS)/uart_iface/uart_iface.mk
 include $(CHIBIOS)/spi_flash/spi_flash.mk
+include $(CHIBIOS)/encoder/encoder.mk
 
 # Define linker script file here
 LDSCRIPT= $(PORTLD)/STM32F407xG.ld
@@ -87,6 +88,7 @@ CSRC = $(PORTSRC) \
        $(BOARDSRC) \
        $(SERIALSRC) \
        $(SPIFLASHSRC) \
+       $(ENCODERSRC) \
        $(CHIBIOS)/os/various/chprintf.c \
        main.c
 
@@ -125,7 +127,8 @@ INCDIR = $(PORTINC) \
 	 $(BOARDINC) \
          $(CHIBIOS)/os/various \
 	 $(SERIALINC) \
-         $(SPIFLASHINC)
+         $(SPIFLASHINC) \
+         $(ENCODERINC)
 
 #
 # Project, sources and paths
