debug on PA9/PA10 now available
-MD

--- a/stm32l1-devel/Makefile
+++ b/stm32l1-devel/Makefile
@@ -128,8 +128,8 @@ INCDIR = $(PORTINC) \
          $(CHIBIOS)/os/various \
 	 $(SERIALINC) \
          $(SPIFLASHINC) \
-         $(ENCODERINC) \
-#         $(CAMERAINC)
+         $(ENCODERINC) 
+         #$(CAMERAINC)
 
 #
 # Project, sources and paths
