jpegant: adding 'check' target to Makefile
  * 'make check' builds program, compresses image, dumps result to stdout
  * useful for testing certain portions of the output
  * uses 'od' tool (octal dump)
  * also fixing dependency target program has on 'main.c'

--- a/jpegant/jpegant-stripped/src/encoder/Makefile
+++ b/jpegant/jpegant-stripped/src/encoder/Makefile
@@ -4,11 +4,18 @@ CFLAGS+=-Wa,-a=$<.s
 LIBS =
 OBJECTS = dct.o jpegenc.o rgbdata.o
 
-jpegant: $(OBJECTS)
+jpegant: $(OBJECTS) main.c
 	$(CC) $(CFLAGS) main.c $(OBJECTS) -o jpegant
 
 $(OBJECTS): %.o: %.c
 	$(CC) -c $(CFLAGS) $< -o $@
                   
+
+# check program output by compressing 'image.rgb' and then
+# writing the first 64 bytes of the resulting image the screen
+check: jpegant image.rgb
+	./$< image.rgb test.jpg
+	od -x -N64 -w32 test.jpg
 clean:
 	rm -f $(OBJECTS) jpegant *.s
+	rm -f test.jpg
