jpegant/build: trying to strip out relevant information, adding README

--- a/jpegant/jpegant-stripped/src/encoder/Makefile
+++ b/jpegant/jpegant-stripped/src/encoder/Makefile
@@ -13,9 +13,16 @@ $(OBJECTS): %.o: %.c
 
 # check program output by compressing 'image.rgb' and then
 # writing the first 64 bytes of the resulting image the screen
+# (note that each word stores results with bytes flipped, that
+# is '0xABCD' is written as '0xCDAB')
 check: jpegant image.rgb
 	./$< image.rgb test.jpg
-	od -x -N64 -w32 test.jpg
+	echo 'huffman_start():'
+	od -x -N2 -w32 test.jpg
+	echo 'write_APP0info():'
+	od -x -N16 -j2 -w32 test.jpg
+	echo 'write_DQTinfo():'
+	od -x -N134 -j18 -w32 test.jpg
 clean:
 	rm -f $(OBJECTS) jpegant *.s
 	rm -f test.jpg
