jpegant: trying to pin down where the 'bogus marker length' error occurs
  * validating jpeg with 'jpeginfo' fails with 'bogus marker length'
    error
  * probably due to the write_DRIinfo() method: 0xFFDD RSIn
  * not sure why this fails; everything seems kosher

--- a/jpegant/jpegant-stripped/src/encoder/Makefile
+++ b/jpegant/jpegant-stripped/src/encoder/Makefile
@@ -3,11 +3,12 @@ CFLAGS =-O2 -std=c99 -D__X86
 CFLAGS+=-Wa,-a=$<.s
 LIBS =
 OBJECTS = dct.o jpegenc.o rgbdata.o
+HEADERS = dct.h jpegenc.h rgbdata.h
 
 jpegant: $(OBJECTS) main.c
 	$(CC) $(CFLAGS) main.c $(OBJECTS) -o jpegant
 
-$(OBJECTS): %.o: %.c
+$(OBJECTS): %.o: %.c $(HEADERS)
 	$(CC) -c $(CFLAGS) $< -o $@
                   
 
@@ -18,20 +19,22 @@ $(OBJECTS): %.o: %.c
 test_image := jpeg_spacetest/640x480_test.rgb
 check: jpegant $(test_image)
 	./$< $(test_image) test.jpg
-	@echo ':: huffman_start() ::'
-	@od -x -j0    -N2    -w32 test.jpg
-	@echo ':: write_APP0info() ::'
-	@od -x -j2    -N18   -w32 test.jpg
-	@echo ':: write_DQTinfo() ::'
-	@od -x -j20   -N134  -w32 test.jpg
-	@echo ':: write_SOF0info(w,h) ::'
-	@od -x -j154  -N19   -w32 test.jpg
-	@echo ':: write_DHTinfo() ::'
-	@od -x -j173  -N420  -w32 test.jpg
-	@echo ':: write_SOSinfo() ::'
-	@od -x -j593  -N13   -w32 test.jpg
-	@echo ':: start of compressed data ::'
-	@od -x -j606  -N8    -w32 test.jpg
+	@echo ':: huffman_start() ::'      >  test.out
+	@od -x -j0    -N2    -w32 test.jpg >> test.out
+	@echo ':: write_APP0info() ::'     >> test.out
+	@od -x -j2    -N18   -w32 test.jpg >> test.out
+	@echo ':: write_DQTinfo() ::'      >> test.out
+	@od -x -j20   -N134  -w32 test.jpg >> test.out
+	@echo ':: write_SOF0info(w,h) ::'  >> test.out
+	@od -x -j154  -N19   -w32 test.jpg >> test.out
+	@echo ':: write_DHTinfo() ::'      >> test.out
+	@od -x -j173  -N420  -w32 test.jpg >> test.out
+	@echo ':: write_DRIinfo() ::'      >> test.out
+	@od -x -j593  -N4    -w32 test.jpg >> test.out
+	@echo ':: write_SOSinfo() ::'      >> test.out
+	@od -x -j597  -N14   -w32 test.jpg >> test.out
+	@echo ':: start of compressed data ::' >> test.out
+	@od -x -j611  -N8    -w32 test.jpg >> test.out
 
 clean:
 	rm -f $(OBJECTS) jpegant *.s
