jpegant: final code cleanup for review
  * gave better explanation of what's going on in README.md
  * simplified 'write_RSI()' interface
  * restart interval now declared as internally static
  * removing debugging macros (ENABLE_RSI)
  * fixing potential bug with initializing DC Huffman predictors

--- a/jpegant/jpegant-stripped/src/encoder/Makefile
+++ b/jpegant/jpegant-stripped/src/encoder/Makefile
@@ -42,4 +42,4 @@ check: jpegant $(test_image) corruptor
 
 clean:
 	rm -f $(OBJECTS) jpegant *.s
-	rm -f test.jpg corrupt.jpg
+	rm -f test.out test.jpg corrupt.jpg
